--- a/style.css
+++ b/style.css
@@ -17,12 +17,19 @@ main {
 
 /* Oda */
 .fenomen {
-    
+    padding: 20px; 
+    margin: 10px; 
+    background-color: pink;
 }
 
 #tuttifrutti {
     display: grid; 
     grid-template-columns: 1fr 1fr 1fr;
+}
+
+#tuttifrutti h2 {
+    grid-column: 1/4;
+
 }
 
 
