--- a/style.css
+++ b/style.css
@@ -52,13 +52,12 @@ img {
 
 
 /* Oda */
-.fenomen {}
+.fenomen {
+}
 
 #tuttifrutti {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
-
-
 
 /* Johanne */
