--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ img {
 #tuttifrutti {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    padding: 20px; 
 }
 
 #tuttifrutti h2 {
@@ -72,15 +73,18 @@ img {
 }
 
 #tuttifrutti h3 {
-    padding: 20px;
-    text-align: center;
-    font-size: 25px;
-
+    font-size: 23px;
+    padding-bottom: 10px;
 }
+
 
 i {
     font-size: 30px;
     padding: 10px;
+}
+
+p {
+    padding-bottom: 10px;
 }
 
 
