--- a/style.css
+++ b/style.css
@@ -54,22 +54,22 @@ img {
 
 /* Oda */
 .fenomen {
-    padding: 20px; 
-    margin: 10px; 
+    padding: 20px;
+    margin: 10px;
     background-color: pink;
 }
 
 #tuttifrutti {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    padding: 20px; 
+    padding: 20px;
 }
 
 #tuttifrutti h2 {
     grid-column: 1/4;
     text-align: center;
     font-size: 50px;
-    padding: 20px; 
+    padding: 20px;
 }
 
 #tuttifrutti h3 {
@@ -86,6 +86,50 @@ i {
 p {
     padding-bottom: 10px;
 }
+
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 400px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+
+}
+
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    /* Safari */
+    backface-visibility: hidden;
+}
+
+.flip-card-front {
+    background-color: pink;
+    padding: 20px; 
+    color: black;
+}
+
+.flip-card-back {
+    background-color: pink;
+    transform: rotateY(180deg);
+
+}
+
 
 
 
