--- a/style.css
+++ b/style.css
@@ -60,14 +60,11 @@ img {
 }
 
 #tuttifrutti {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #tuttifrutti h2 {
-    grid-column: 1/4;
-    text-align: center;
     font-size: 50px;
     padding: 20px;
 }
