--- a/style.css
+++ b/style.css
@@ -69,12 +69,13 @@ img {
 }
 
 #tuttifrutti h3 {
-    font-size: 23px;
+    font-size: 30px;
     padding-bottom: 10px;
 }
 
 i {
-    font-size: 30px;
+    font-size: 100px;
+    text-align: center;
     padding: 10px;
 }
 
