--- a/style.css
+++ b/style.css
@@ -139,3 +139,10 @@ nav {
     width: 100%;
     background: blue;
 }
+
+label.logo {
+    font-size :35px;
+    font-weight : bold;
+    color : white;
+    padding : 0px 100px;
+}
