--- a/gdpr.css
+++ b/gdpr.css
@@ -11,7 +11,7 @@ font-family: 'Comfortaa', sans-serif;
     --main-font-color: black;
 
     --primary-color: ;
-    --secondary-color:;
+    --secondary-color:
     --tertiary-color: ;
     --quanternary-color: ;
 }
