--- a/style.css
+++ b/style.css
@@ -12,41 +12,93 @@ main {
 }
 
 /* Erika */
-.slideshow-container {
-    position: relative;
-    max-width: 800px;
-    margin: auto;
+body {
+    margin: 0;
+    box-sizing: border-box;
+    background: #222;
 }
 
-.slide {
-    display: none;
+h1 {
+    text-align: center;
+    color: #eee;
+    font-family: "Roboto Thin", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 8px;
 }
 
-img {
+.wrapper {
     width: 100%;
-    height: 500px;
+    overflow: hidden;
 }
 
-.prev,
-.next {
+.slides-container {
+    height: 500px;
+    transition: 900ms cubic-bezier(0.48, 0.15, 0.18, 1);
+    position: relative;
+}
+
+.slide-image {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+.slide-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.next-btn,
+.prev-btn {
+    background: #eee;
+    padding: 16px;
     position: absolute;
     top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
+    transform: translateY(-50%);
     font-size: 20px;
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
     z-index: 100;
+    cursor: pointer;
+    transition: 400ms;
 }
 
-.prev {
+.next-btn:hover,
+.prev-btn:hover {
+    background: #48f9ff;
+}
+
+.prev-btn {
     left: 0;
 }
 
-.next {
+.next-btn {
     right: 0;
+}
+
+/* Navigation Dots */
+
+.navigation-dots {
+    display: flex;
+    height: 32px;
+    align-items: center;
+    justify-content: center;
+    margin: 16px 0;
+}
+
+.single-dot {
+    background: #333;
+    height: 16px;
+    width: 16px;
+    border: 2px solid #000;
+    border-radius: 50%;
+    margin: 0 8px;
+    cursor: pointer;
+    transition: 400ms;
+}
+
+.single-dot.active {
+    background: #eee;
 }
 
 
@@ -128,7 +180,7 @@ li {
 
 .flip-card-back {
     background-color: pink;
-    padding: 25px; 
+    padding: 25px;
     transform: rotateY(180deg);
 }
 
@@ -144,20 +196,20 @@ nav {
 }
 
 label.logo {
-    font-size :35px;
-    font-weight : bold;
-    color : white;
-    padding : 0px 100px;
+    font-size: 35px;
+    font-weight: bold;
+    color: white;
+    padding: 0px 100px;
 }
 
 nav ul {
-    float : right;
-    margin-right : 40px;
+    float: right;
+    margin-right: 40px;
 }
 
 nav li {
     display: inline-block;
-    margin : 0 8px;
+    margin: 0 8px;
     line-height: 80px;
 }
 
@@ -165,5 +217,5 @@ nav li {
 
 .boks {
     display: flex;
-    
+
 }
