--- a/style.css
+++ b/style.css
@@ -12,18 +12,17 @@ main {
 }
 
 /* Erika */
-body {
-    margin: 0;
-    box-sizing: border-box;
-    background: #222;
-}
+
 
 h1 {
     text-align: center;
-    color: #eee;
+    color: black;
     font-family: "Roboto Thin", sans-serif;
     text-transform: uppercase;
     letter-spacing: 8px;
+    margin: 30px;
+    font-size: 40px;
+    font-weight: 900;
 }
 
 .wrapper {
@@ -32,7 +31,7 @@ h1 {
 }
 
 .slides-container {
-    height: 500px;
+    height: 600px;
     transition: 900ms cubic-bezier(0.48, 0.15, 0.18, 1);
     position: relative;
 }
@@ -54,7 +53,7 @@ h1 {
     background: #eee;
     padding: 16px;
     position: absolute;
-    top: 50%;
+    top: 80%;
     transform: translateY(-50%);
     font-size: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
