--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ main {
 
 /* Footer */
 footer {
-    background-color: var(--Bice-blue);
+    background-color: black;
     padding-bottom: 30px;
     padding-top: 20px;
     color: white;
