footer rusk endret

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ main {
 footer {
     background-color: black;
     padding-bottom: 30px;
-    padding-top: 20px;
+    padding-top: 30px;
     color: white;
 }
 
@@ -33,8 +33,8 @@ footer h4 {
 }
 
 footer p {
-    font-size: xx-small;
-    margin-bottom: 15px;
+    font-size: small;
+    margin-top: 5px;
 }
 
 .FooterContainer {
@@ -42,6 +42,9 @@ footer p {
     grid-template-columns: 1fr 6fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 5px;
+}
+footer i {
+    font-size: 15px;
 }
 
 /* Erika */
