--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ h1 {
 
 .next-btn,
 .prev-btn {
-    background: #eee;
+    background: #ff00bf;
     padding: 16px;
     position: absolute;
     top: 80%;
