--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ nav li {
     background-color: ghostwhite;
 }
 
-.UU section {
+.uu section {
     margin-bottom: 20px;
 }
 
@@ -266,20 +266,20 @@ nav li {
     padding-bottom: 15px;
 }
 
-.UU h1 {
+.uu h1 {
     font-size: 60px;
 }
 
 
-.UU p {
+.uu p {
     font-size: 20px;
 }
 
-.UU h2 {
+.uu h2 {
     font-size: 45px;
 }
 
-.UU i {
+.uu i {
     padding: 30px;
 }
 
