--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ li {
 /* Johanne */
 
 nav {
-    background-color: #333; /* Bakgrunnsfarge */
+    background-color:blue; /* Bakgrunnsfarge */
 }
 
 nav ul {
