--- a/uu_style.css
+++ b/uu_style.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: ghostwhite;
+    color:black
 }
 
 main {
@@ -80,4 +81,9 @@ i {
     border-color: coral;
     border-radius: 20px;
     border-width: medium;
+}
+
+.dark-mode {
+    background-color: black;
+    color:white
 }
