--- a/style.css
+++ b/style.css
@@ -77,12 +77,12 @@ i {
     padding: 10px;
 }
 
-p {
+#tuttifrutti p {
     font-size: 13px;
     padding-bottom: 5px;
 }
 
-li {
+#tuttifrutti li {
     font-size: 13px;
 }
 
