--- a/slideshow.css
+++ b/slideshow.css
@@ -9,40 +9,30 @@ h1 {
     font-weight: 900;
 }
 
-a.active,a:hover {
-    border: 1px solid white;
-    transition: .5s;
-}
-
-.wrapper {
-    width: 100%;
+.slideshow_container {
+    width: 1250px;
     overflow: hidden;
+    margin: auto;
 }
 
-.slides-container {
-    height: 600px;
+.slides_container {
+    height: 530px;
     transition: 900ms cubic-bezier(0.48, 0.15, 0.18, 1);
     position: relative;
 }
 
-.slide-image {
+.slide {
     height: 100%;
     width: 100%;
     position: absolute;
 }
 
-.slide-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.next-btn,
-.prev-btn {
+.neste_knapp,
+.tilbake_knapp {
     background: #ff00bf;
     padding: 16px;
     position: absolute;
-    top: 80%;
+    top: 60%;
     transform: translateY(-50%);
     font-size: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
@@ -51,22 +41,22 @@ a.active,a:hover {
     transition: 400ms;
 }
 
-.next-btn:hover,
-.prev-btn:hover {
+.neste_knapp:hover,
+.tilbake_knapp:hover {
     background: #48f9ff;
 }
 
-.prev-btn {
+.tilbake_knapp {
     left: 0;
 }
 
-.next-btn {
+.neste_knapp {
     right: 0;
 }
 
-/* Navigation Dots */
+/* Navigasjons Prikker */
 
-.navigation-dots {
+.navigasjonsprikker {
     display: flex;
     height: 32px;
     align-items: center;
@@ -74,7 +64,7 @@ a.active,a:hover {
     margin: 16px 0;
 }
 
-.single-dot {
+.prikkene {
     background: #333;
     height: 16px;
     width: 16px;
@@ -85,8 +75,45 @@ a.active,a:hover {
     transition: 400ms;
 }
 
-.single-dot.active {
+.prikkene.aktiv {
     background: #eee;
 }
 
+.mobbeoffer {
+    padding: 100px 780px 300px 120px;
+    background-size: cover;
+}
 
+.mobbeoffer a {
+    color: greenyellow;
+    text-decoration: none;
+}
+
+.mobbeoffer a:hover {
+    color: green;
+}
+
+.Guri {
+    background-image: url(https://g.acdn.no/obscura/API/dynamic/r1/ece5/tr_2000_2000_s_f/0000/tele/2020/10/12/17/13NYH_01-01-DSC_0599.jpg?chk=A8F5B0);
+    padding: 50px 700px 400px 150px;
+}
+
+.norskjente {
+    background-image: url(https://g.acdn.no/obscura/API/dynamic/r1/ece5/tr_2000_2000_s_f/0000/helg/2015/9/15/12/1442312358820.jpg?chk=43D8DF);
+}
+
+.Villemo {
+    background-image: url(https://g.acdn.no/obscura/API/dynamic/r1/escenic/tr_2000_2000_s_f/0000/archive/05746/ashighaiodhguoi_s_5746354a.jpg?chk=636FC0);
+    color: white;
+}
+
+.Amanda {
+    background-image: url(https://imaginary.abcmedia.no/resize?force=false&width=1366&aspectratio=16:9&nocrop=false&interlace=true&url=https%3A%2F%2Fabcnyheter.drpublish.aptoma.no%2Fout%2Fimages%2Farticle%2F%2F2012%2F10%2F13%2F195126410%2F1%2Foriginal%2F2208778.jpg);
+    padding: 10px 100px 370px 820px;
+}
+
+.svenskjente {
+    background-image: url(https://akamai.vgc.no/v2/images/5d327971-db44-4590-ba7d-65a67f6099d3?format=auto&w=720&s=d9eb65fd2fdb17df0a3b3697752563e6df720a76);
+    color: white;
+    background-position: bottom;
+}
