--- a/style.css
+++ b/style.css
@@ -136,25 +136,34 @@ i {
 /* Johanne */
 
 nav {
-    background-color:#4a4e69ff;
+    background-color:#9a8c98ff ;
     display: flex;
     justify-content: space-between; /* Plasserer elementer med like mye avstand mellom dem */
     align-items: center;
     padding: 10px;
     font-size: 20px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+
+
+.logo i {
+    font-size: 20px;
+    margin-left: 30px;
 }
 
 .logo a {
     
-    margin-left: 20px;
+    margin-left: 2px;
     color: white;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-decoration: none;
+    font-size:20px ;
 }
 
 /* CSS HEX */
 --space-cadet: #22223bff;
---ultra-violet: #4a4e69ff;
+--ultra-violet:  #22223bff;
 --rose-quartz: #9a8c98ff;
 --pale-dogwood: #c9ada7ff;
 --isabelline: #f2e9e4ff;
