--- a/style.css
+++ b/style.css
@@ -78,6 +78,20 @@ footer i {
     padding: 15px; 
 }
 
+#ressurser {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; 
+}
+
+#ressurser div:nth-of-type(1) {
+    grid-column: span 3; 
+
+}
+
+#ressurser div {
+    margin: 5px; 
+    padding: 15px; 
+}
 
 .fenomen {
     padding: 20px;
