--- a/gdpr.css
+++ b/gdpr.css
@@ -11,7 +11,7 @@ font-family: 'Comfortaa', sans-serif;
     --main-font-color: black;
 
     --primary-color: ;
-    --secondary-color:
+    --secondary-color: ;
     --tertiary-color: ;
     --quanternary-color: ;
 }
@@ -40,12 +40,138 @@ a {
     color: var(--main-font-color);
 }
 
-/* Navbar */
+/* GDPR */
 
-/* Hovedside */
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: fit-content;
+}
 
-/* Personvern side */
+#main-image {
+    margin-top: 60px;
+    height: 400px;
+}
 
-/* Footer */
+.image-container {
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+}
+
+.icon-box {
+    position: absolute;
+    text-align: center;
+    transform-origin: center bottom;
+}
+
+.icon-box img {
+    width: 50px;
+    height: 50px;
+    z-index: 1;
+}
+
+.icon-box h2,
+.icon-box p {
+    display: none;
+}
+
+.icon-box:hover h2,
+.icon-box:hover p {
+    display: block;
+    z-index: 1;
+    background-color: lightblue;
+    width: 600px;
+}
+
+#icon-box-1 {
+    transform: rotate(-45deg) translateY(-180px);
+}
+
+#icon-box-2 {
+    transform: rotate(-90deg) translateY(-180px);
+}
+
+#icon-box-3 {
+    transform: rotate(-135deg) translateY(-180px);
+}
+
+#icon-box-4 {
+    transform: rotate(-180deg) translateY(-180px);
+}
+
+#icon-box-5 {
+    transform: rotate(45deg) translateY(-180px);
+}
+
+#icon-box-6 {
+    transform: rotate(90deg) translateY(-180px);
+}
+
+#icon-box-7 {
+    transform: rotate(135deg) translateY(-180px);
+}
+
+#icon-box-8 {
+    transform: rotate(0deg) translateY(-180px);
+}
+
+
+#definition {
+    font-weight: bold;
+}
+
+h1 {
+    margin-top: 30px;
+}
+
+#personvern {
+    background-color: lightcyan;
+    margin: 60px 0px;
+    padding: 50px;
+}
+
+#cookies-intro {
+    background-color: rgba(255, 182, 193, 0.736);
+    margin: 15px 0px;
+    padding: 50px;
+}
+
+.videreføring {
+    text-decoration: underline;
+    color: darkblue;
+}
+
+
+#cookies {
+    background-color: beige;
+    padding: 50px;
+    max-width: 800px;
+    margin: 20px 0;
+}
+
+#arrow {
+    height: 200px;
+}
+
+.hidden {
+    display: none;
+    /* Skjul elementer med denne klassen */
+}
 
 /* Media Queries */
+
