fjerne rødt melding

--- a/style.css
+++ b/style.css
@@ -213,11 +213,13 @@ nav {
 }
 
 /* CSS HEX */
+/*
 --space-cadet: #22223bff;
 --ultra-violet:#4a4e69ff;
 --rose-quartz: #9a8c98ff;
 --pale-dogwood: #c9ada7ff;
 --isabelline: #f2e9e4ff;
+*/
 
 .right-sections ul {
     list-style-type: none;
