--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 /* Minimal CSS Reset */
+
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+
+/*
+font-family: 'Comfortaa', sans-serif;
+*/
+
 * {
     padding: 0;
     margin: 0;
@@ -9,6 +16,7 @@
 main {
     max-width: 800px;
     margin: auto;
+    font-family: 'Comfortaa', sans-serif;
 }
 
 /* Footer */
