--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ font-family: 'Comfortaa', sans-serif;
 main {
     max-width: 800px;
     margin: auto;
+    font-family: 'Comfortaa', sans-serif;
 }
 
 /* Footer */
@@ -24,6 +25,7 @@ footer {
     padding-bottom: 100px;
     padding-top: 50px;
     color: white;
+    font-family: 'Comfortaa', sans-serif;
 }
 
 #footer {
