--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
-/* Minimal CSS Reset */
-
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
-
 /*
 font-family: 'Comfortaa', sans-serif;
 */
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
 
+/* Minimal CSS Reset */
 * {
     padding: 0;
     margin: 0;
@@ -50,10 +48,12 @@ footer p {
     display: grid;
     grid-template-columns: 1fr 6fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 5px;
+    column-gap: 20px;
+    row-gap: 20px;
 }
 footer i {
     font-size: 15px;
+    padding-top: 8px;
 }
 
 
