--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ font-family: 'Comfortaa', sans-serif;
 main {
     max-width: 800px;
     margin: auto;
-    
+    font-family: 'Comfortaa', sans-serif;
 }
 
 /* Footer */
