--- a/spill.css
+++ b/spill.css
@@ -114,7 +114,7 @@
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 500px;
     background-color: var(--primary-color);
     top: 0;
   }
