--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ footer i {
 
 header {
     position: fixed;
+    z-index: 1;
     top:0;
     left:0;
     width: 100%;
@@ -73,8 +74,6 @@ nav {
     justify-content: space-between; 
     align-items: center;
     padding: 10px;
-    
-
 }
 
 .logo i {
