--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header {
 }
 
 nav {
-    background-color:lightblue;
+    background-color:lightskyblue;
     display: flex;
     justify-content: space-between; 
     align-items: center;
