litt endring på en rosa farge

--- a/slideshow.css
+++ b/slideshow.css
@@ -4,7 +4,7 @@
     --tertiary-color: #61A5C2;
     --quaternary-color:#89C2D9;
     --quinary-color: #fed9f6;
-    --senary-color: #ba407d; 
+    --senary-color: #cd4883d9; 
     --septenary-color: #fef0fa; 
   
   }
