--- a/gdpr.css
+++ b/gdpr.css
@@ -15,9 +15,8 @@ font-family: 'Comfortaa', sans-serif;
     --tertiary-color: #61A5C2;
     --quaternary-color: #89C2D9;
     --quinary-color: #fed9f6;
-    --senary-color: #ba407d;
+    --senary-color: #cd4883d9;
     --septenary-color: #fef0fa;
-
 
 }
 
