--- a/index.css
+++ b/index.css
@@ -1,15 +1,15 @@
 /* Oda */
 
-  :root {
+:root {
     --primary-color: #012A4A;
-    --secondary-color:#01497C;
+    --secondary-color: #01497C;
     --tertiary-color: #61A5C2;
-    --quaternary-color:#89C2D9;
+    --quaternary-color: #89C2D9;
     --quinary-color: #fed9f6;
-    --senary-color: #ba407d; 
-    --septenary-color: #fef0fa; 
-  
-  }
+    --senary-color: #cd4883d9;
+    --septenary-color: #fef0fa;
+}
+
 
 #nettmobbing {
     display: grid; 
