--- a/uu_style.css
+++ b/uu_style.css
@@ -1,3 +1,14 @@
+:root {
+    --primary-color: #012A4A;
+    --secondary-color:#01497C;
+    --tertiary-color: #61A5C2;
+    --quaternary-color:#89C2D9;
+    --quinary-color: #fed9f6;
+    --senary-color: #cd4883d9; 
+    --septenary-color: #fef0fa; 
+  }
+
+
 body {
     background-color: ghostwhite;
     color:black
