litt mer justering på farger

--- a/spill.css
+++ b/spill.css
@@ -197,7 +197,7 @@ i {
   background-color: transparent;
   width: 245px;
   height: 350px;
-  border: 1px solid #f1f1f1;
+  border: 1px solid var(--senary-color);
   perspective: 1000px;
 }
 
