--- a/index.css
+++ b/index.css
@@ -44,8 +44,6 @@
 }
 
 #ressurser {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr; 
     font-size: 18px; 
     margin-bottom: 100px; 
 }
@@ -61,10 +59,18 @@
 }
 
 #ressurser img {
-    width: 160px;
     height: 120px; 
+    align-content: center;
 }
 
 #ressurser a {
     color: var(--senary-color)
 }
+
+@media only screen and (min-width: 800px) {
+    #ressurser {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr; 
+
+    }
+  }
