--- a/style.css
+++ b/style.css
@@ -29,47 +29,7 @@ main {
   
   }
 
-/* Footer */
-footer {
-    background-color: var(--primary-color);
-    padding-bottom: 100px;
-    padding-top: 50px;
-    color: white;
-    font-family: 'Comfortaa', sans-serif;
-}
-
-#footer {
-    max-width: 800px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    gap: 20%;
-}
-
-footer h4 {
-    font-size: larger;
-    margin-bottom: 15px;
-}
-
-footer p {
-    font-size: small;
-    margin-top: 5px;
-}
-
-.FooterContainer {
-    display: grid;
-    grid-template-columns: 1fr 6fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    column-gap: 20px;
-    row-gap: 20px;
-}
-
-footer i {
-    font-size: 15px;
-    padding-top: 8px;
-}
-
-/* Johanne */
+/* Nav-bar */
 
 header {
     position: fixed;
@@ -119,4 +79,44 @@ nav {
 
 .right-sections ul li a:hover {
     text-decoration: underline;
+}
+
+/* Footer */
+footer {
+    background-color: var(--primary-color);
+    padding-bottom: 100px;
+    padding-top: 50px;
+    color: white;
+    font-family: 'Comfortaa', sans-serif;
+}
+
+#footer {
+    max-width: 800px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    gap: 20%;
+}
+
+footer h4 {
+    font-size: larger;
+    margin-bottom: 15px;
+}
+
+footer p {
+    font-size: small;
+    margin-top: 5px;
+}
+
+.FooterContainer {
+    display: grid;
+    grid-template-columns: 1fr 6fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 20px;
+}
+
+footer i {
+    font-size: 15px;
+    padding-top: 8px;
 }
