--- a/style.css
+++ b/style.css
@@ -120,3 +120,14 @@ footer i {
     font-size: 15px;
     padding-top: 8px;
 }
+
+@media only screen and (max-width: 850px) {
+    #footer {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+    }
+    #footer div:nth-of-type(1) {
+        grid-column: span 2;
+    }
+  }
+
