--- a/om-oss.css
+++ b/om-oss.css
@@ -20,11 +20,22 @@
     h1,
     h2 {
       margin-top: 0;
+      
     }
 
     h2 {
       font-size: 30px;
+
     }
+
+    h1 {
+        font-size: 65px;
+        text-align: center;
+        margin-bottom: 30px;
+        margin-top: 30px;
+        text-shadow: 3px 3px 3px grey;
+    }
+    
 
     img {
       margin: 30px;
