--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ main {
     margin: auto;
     margin-top: 115px;
     font-family: 'Comfortaa', sans-serif;
+    background-color: ghostwhite;
 }
 
 :root {
