--- a/om-oss.css
+++ b/om-oss.css
@@ -70,7 +70,20 @@
       img {
         width: 300px
       }
-    }
+
+        h1 {
+            font-size: 40px;
+        }
+    
+        h2 {
+            font-size: 20px;
+        }
+    
+        p {
+            font-size: 12px;
+        }
+      }
+    
     @media only screen and (max-width: 450px) {
       img {
         width: 250px
