--- a/om-oss.css
+++ b/om-oss.css
@@ -82,7 +82,12 @@
         p {
             font-size: 12px;
         }
+
+        section {
+          margin: 10px;
+        }
       }
+
     
     @media only screen and (max-width: 450px) {
       img {
