--- a/gdpr.css
+++ b/gdpr.css
@@ -56,6 +56,7 @@ h1 {
     text-shadow: 3px 3px 3px grey;
     background-color: rgba(0, 0, 0, 0.3);
     color: rgb(255, 255, 255);
+    font-family: 'Comfortaa', sans-serif;
     width: 500px;
 }
 
