--- a/gdpr.css
+++ b/gdpr.css
@@ -61,11 +61,12 @@ p {
     justify-content: center;
     align-items: center;
     height: fit-content;
+    height: 800px;
 }
 
 #main-image {
-    margin-top: 60px;
-    height: 400px;
+    margin-top: 70px;
+    height: 380px;
 }
 
 .image-container {
@@ -78,9 +79,10 @@ p {
     transform-origin: center bottom;
 }
 
-.icon-box img {
-    width: 50px;
-    height: 50px;
+.icon-box i {
+    font-size: 40px;
+    color: skyblue;
+    padding-bottom: 20px;
 }
 
 .icon-box h2,
@@ -98,7 +100,7 @@ p {
 }
 
 .icon-box:not(:hover) {
-    z-index: 1;
+    z-index: 1; 
 }
 
 #icon-box-1 {
