fikset videreføring i nav

--- a/gdpr/gdpr.css
+++ b/gdpr/gdpr.css
@@ -38,7 +38,7 @@ a {
 
 /* GDPR */
 #hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), url(bilder/personvern.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), url(../bilder/personvern.png);
     height: fit-content;
     color: var(--hero-font-color);
     background-size: cover;
