--- a/spill/spill.css
+++ b/spill/spill.css
@@ -4,12 +4,12 @@
 
 :root {
   --primary-color: #012A4A;
-  --secondary-color:#01497C;
+  --secondary-color: #01497C;
   --tertiary-color: #61A5C2;
-  --quaternary-color:#89C2D9;
+  --quaternary-color: #89C2D9;
   --quinary-color: #fed9f6;
-  --senary-color: #cd4883d9; 
-  --septenary-color: #fef0fa; 
+  --senary-color: #cd4883d9;
+  --septenary-color: #fef0fa;
 
 }
 
@@ -33,20 +33,29 @@
   box-shadow: 0 0.9em 2.8em rgba(86, 66, 0, 0.2);
 }
 
-.instructions {
+.instructions,
+#highscore-container {
   padding: 20px;
-  background-color: var(--septenary-color);
-  border: 0.5px solid var(--senary-color);
-  border-radius: 20px;
   font-family: 'Handlee', cursive;
-  font-size: 16px;
   font-weight: 600;
   width: 400px;
   line-height: 2;
-  margin-top: 565px;
   margin-left: 25px;
   position: relative;
+}
+
+#highscore-container {
+  margin-top: 220px;
+  font-size: 18px;
+}
+
+.instructions {
+  margin-top: 255px;
   z-index: 1;
+  background-color: var(--septenary-color);
+  border: 0.5px solid var(--senary-color);
+  border-radius: 20px;
+  font-size: 16px;
 }
 
 .game-container {
