--- a/spill/spill.css
+++ b/spill/spill.css
@@ -6,7 +6,7 @@
   --primary-color: #012A4A;
   --secondary-color: #01497C;
   --tertiary-color: #61A5C2;
-  --quaternary-color: #89C2D9;
+  --quaternary-color: #caf0f8;
   --quinary-color: #fed9f6;
   --senary-color: #cd4883d9;
   --septenary-color: #fef0fa;
@@ -42,11 +42,14 @@
   line-height: 2;
   margin-left: 25px;
   position: relative;
+  border-radius: 20px;
 }
 
 #highscore-container {
   margin-top: 220px;
   font-size: 18px;
+  background-color: var(--quaternary-color);
+  border: 0.5px solid var(--tertiary-color);
 }
 
 .instructions {
@@ -54,7 +57,6 @@
   z-index: 1;
   background-color: var(--septenary-color);
   border: 0.5px solid var(--senary-color);
-  border-radius: 20px;
   font-size: 16px;
 }
 
