--- a/index/index.css
+++ b/index/index.css
@@ -36,6 +36,29 @@
 
 #nettmobbing div:nth-of-type(4) {
     grid-column: span 2;
+    margin-top: 30px;
+}
+
+#paragraf {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#paragraf i:nth-of-type(1) {
+    padding: 20px;
+    font-size: 150px;
+    color: var(--quaternary-color)
+}
+
+#paragraf i:nth-of-type(2) {
+    padding: 20px;
+    font-size: 100px;
+    color: var(--secondary-color)
+}
+
+#nettmobbing div:nth-of-type(5) {
+    grid-column: span 2;
 }
 
 #nettmobbing div {
