--- a/index/index.css
+++ b/index/index.css
@@ -39,26 +39,26 @@
     margin-top: 30px;
 }
 
-#paragraf {
+#paragraf i, #ulovlig i {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#paragraf i:nth-of-type(1) {
+#paragraf i {
     padding: 20px;
-    font-size: 150px;
-    color: var(--quaternary-color)
-}
-
-#paragraf i:nth-of-type(2) {
-    padding: 20px;
-    font-size: 100px;
+    font-size: 120px;
     color: var(--secondary-color)
 }
 
 #nettmobbing div:nth-of-type(5) {
     grid-column: span 2;
+}
+
+#ulovlig i  {
+    padding: 20px;
+    font-size: 120px;
+    color: var(--quaternary-color)
 }
 
 #nettmobbing div {
