--- a/spill/spill.css
+++ b/spill/spill.css
@@ -169,6 +169,9 @@ img {
 }
 
 /* Kort */
+h2 {
+  text-align: center;
+}
 
 .fenomen {
   padding: 20px;
@@ -250,4 +253,21 @@ i {
   background-color: var(--quinary-color);
   padding: 25px;
   transform: rotateY(180deg);
+}
+
+@media only screen and (max-width: 1000px) {
+  .instructions {
+    margin-top: 50px;
+    width: 500px;
+  }
+
+  #highscore-container {
+    margin-top: 850px;
+    width: 500px;
+  }
+
+.game-boxes {
+  display: grid;
+  justify-content: center;
+}
 }
