display non på ulovlig div i index

--- a/index/index.css
+++ b/index/index.css
@@ -61,6 +61,10 @@
     color: var(--quaternary-color)
 }
 
+#ulovlig {
+    display: none;
+}
+
 #nettmobbing div {
     margin: 5px; 
     padding: 15px; 
