--- a/gdpr/gdpr.css
+++ b/gdpr/gdpr.css
@@ -38,21 +38,19 @@ a {
 
 /* GDPR */
 #hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), url(../bilder/personvern.png);
-    height: fit-content;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)), url(../bilder/personvern.png);
     color: var(--hero-font-color);
     background-size: cover;
-    background-position: top;
-    padding: 200px 20px;
+    background-position: center;
+    padding: 250px 200px;
     display: flex;
     justify-content: center;
+    margin-top: 80px;
 }
 
 h1 {
     font-size: 65px;
     text-align: center;
-    margin-bottom: 50px;
-    margin-top: 30px;
     text-shadow: 3px 3px 3px grey;
     background-color: rgba(0, 0, 0, 0.3);
     color: rgb(255, 255, 255);
